Address PR comments: fix example description rendering and unify string style
- Render the description field of a single unnamed example as a paragraph
  between the '## Example' heading and the JSON code block (was missing)
- Switch buildDescription in ToolRegistry to StringBuilder to match the
  style already used in buildExampleBlock within the same class
- Add CLAUDE.md rule: keep string manipulation consistent within a class

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>